Cleaned up formatting issues on main body, aligned copyright text, made image more responsive

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .maintext {
-    line-height: 150%;
+    line-height: 200%;
     font-family: "roboto", sans-serif;
 }
 
@@ -25,8 +25,6 @@ footer {
     background-color: #666666;
     border-top-style: solid;
     border-top-color: teal;
-}
-
-.copyright {
     color: #b3b3b3;
+    text-align: center;
 }
